# koce

./: Cargo.toml
example/: example.koce  example_00.koce  example_01.koce  hello.ll
koce_examples/: Errors  exkoce_00.koce  exkoce_01.koce  exkoce_02.koce  exkoce_03.koce  exkoce_04.koce  exkoce_05.koce  exkoce_06.koce  exkoce_07.koce  keyword.md  syntax.md
lib/core/: Fixed.koce  Primary.koce  Sized.koce  compiler.koce
lib/core/float/: f32.koce
lib/core/handle/: _layers.koce
lib/core/int/: i32.koce
lib/core/op/: Arithmetic.koce  Index.koce  binary.koce  macro.koce
lib/core/ptr/: ptr.koce
lib/core/str/: str.koce
lib/io/: Reader.koce
lib/list/: List.koce
lib/pointer/: Heap.koce  Reference.koce
lib/std/: output.koce
src/: depre_expression.rs  main.rs
src/expr/: mod.rs  syntax.rs  util.rs
src/expr/word/: mod.rs  mod_binary.rs  mod_other.rs  mod_unary.rs  mod_value.rs
src/gom/: iterfn.rs  mod.rs
src/koce/: accessor.rs  cores.rs  expression.rs  mod.rs  nparser.rs  nparser_consume.rs  parser.rs  path.rs  primitive.rs  sentence.rs  symbol.rs  value.rs
src/koce/ast/: display.rs  errors.rs  mod.rs  parse.rs  utils.rs
src/koce/core/: handle.rs  i32.rs  mod.rs
src/koce/ir/: code.rs  fnimpl.rs  inline.rs  macros.rs  mod.rs  path.rs  process.rs  symbol.rs  symbolize.rs  table.rs  util.rs
src/koce/strt/: code.rs  mod.rs
src/lpath/: mod.rs
