[package]
name = "koce"
version = "0.1.0"
authors = ["iamGreedy <egoavara@gmail.com>"]

[dependencies]
regex = "1"
custom_derive = "^0.1.7"
enum_derive = "^0.1.7"
hex = "^0.3.2"
petgraph = "^0.4"
num = "*"
lazy_static = "1.3.0"
xml5ever = "0.14.0"
#llvm-sys = "80"
walkdir = "2.2.7"

[dependencies.nom]
version = "^4.2"
features = ["regexp", "regexp_macros"]